<resources>
    <string name="app_name">Health Kit Sample Code</string>
    <string name="login_info">Touch Login to complete login and authorization, and then use other buttons to try the related API functions.Note: If the login dialog box is not displayed, change the package name, app ID, and configure the signature file by referring to the developer guide on the official website.</string>
    <string name="cancel_scope">Here we provide the example to cancel scope, if you call this, you need re-login and authorize</string>
    <string name="data_controller">Managing historical fitness and health data</string>
    <string name="sensors_controller">Obtaining real-time data of peripheral sensors (phone sensors and external Bluetooth devices)</string>
    <string name="auto_recorder">Continuously recording the fitness data of the user</string>
    <string name="activity_record">Managing single workout session or activity</string>
    <string name="sensors_getController">Getting the SensorsController first</string>
    <string name="sensors_registerStep">Registering and unregistering a listener for step counting</string>
    <string name="sensors_scan">Scanning and saving Bluetooth devices</string>
    <string name="sensors_findSource">Searching for available data collectors and deleting Bluetooth devices</string>
    <string name="sensors_registerHeartRate">Registering and unregistering a listener for heart rate monitoring</string>
    <string name="activity_record_BeginOrEnd">Starting or stopping an activity record</string>
    <string name="activity_background_record_BeginOrEnd">Starting or stopping an background activity record</string>
    <string name="activity_record_AddOrGet">Adding or reading an activity record</string>
    <string name="activity_record_MonitorOptions">Registering or unregistering a listener for monitoring the activity record status</string>
    <string name="activity_record_Delete">Deleting an activity record</string>
    <string name="setting_controller">Managing setting controller</string>
    <string name="setting_controller_set_name">Set new data type name, Duplicate names are unacceptable, this name must start with package name, and End with a custom name.</string>
    <string name="setting_controller_manager">Choose which Field to select，you connot add new Field</string>
    <string name="setting_controller_read_write">Use the newly added data type to write or read value.</string>
    <string name="data_controller_manager">Managing fitness and health data, including inserting, updating, reading, and deleting data</string>
    <string name="data_controller_read">Feature-based query APIs: Querying the summary data of the current day, as well as the summary data on the local device of the current day</string>
    <string name="data_controller_read_latest">Latest data query APIs: Querying the latest data based on the data type</string>
    <string name="data_controller_register">Registering or unregistering a listener for data changes and triggering the listener for testing purposes</string>
    <string name="data_controller_sync">Clearing all fitness and health data between the device and cloud</string>
    <string name="auto_recorder_start_stop_record_by_type">Starting or stopping automatic recording of total step count by data type</string>
    <string name="healthkit_auth_title">Link HUAWEI HealthKit</string>
    <string name="healthkit_auth_confirm">OK</string>
    <string name="healthkit_auth_retry">Re-authorize</string>
    <string name="healthkit_auth_desc">HUAWEI Health Kit provides you with cross-application fitness and health data openness capabilities.\n</string>
    <string name="healthkit_auth_desc_tips">You need to perform the following authorization actions:\n1. Authorize the %s app to access your allowed personal information including health and fitness data by HUAWEI ID.\n2. Link HUAWEI Health app to Huawei Health Kit.</string>
    <string name="healthkit_auth_result1">1. The HUAWEI ID has successfully authorized the %s app to access your personal information including health and fitness data.\n</string>
    <string name="healthkit_auth_result1_fail">1. The HUAWEI ID has failed authorize the %s app to access your personal information including health and fitness data.</string>
    <string name="healthkit_auth_result2_success">\n2. Link HUAWEI Health app to Huawei Health Kit successfully.</string>
    <string name="healthkit_auth_result2_fail">\n2. Link HUAWEI Health app to Huawei Health Kit failed.</string>
    <string name="healthkit_auth_result2_fail_error">\nFailure Cause:</string>
    <string name="healthkit_auth_fail_tips1">\n • Try "Re-authorize" below</string>
    <string name="healthkit_auth_fail_tips2">\n • Manually enabled: Install the latest HUAWEI Health app, open HUAWEI Health app and go to Me > Privacy management > Link HUAWEI Health Kit.</string>
    <string name="healthkit_auth_fail_tips_install">How to enable: \n1. Install the latest HUAWEI Health app. \n2. Open HUAWEI Health app, and go to Me > Privacy management > Link HUAWEI Health Kit.</string>
    <string name="healthkit_auth_fail_tips_update">How to enable: \n1. Update the HUAWEI Health app to the latest version. \n2. Open HUAWEI Health app, and go to Me > Privacy management > Link HUAWEI Health Kit.</string>
    <string name="healthkit_auth_fail_error_50011">API calling error. Please try again.</string>
    <string name="healthkit_auth_fail_error_50005">Scope permission verification failed.</string>
    <string name="healthkit_auth_fail_error_50030">No Internet connection</string>
    <string name="healthkit_auth_fail_error_50038">The user is not using HUAWEI Health.</string>
    <string name="healthkit_auth_fail_error_50040">The registration place of the login account is not in the supported countries and regions.</string>
    <string name="healthkit_auth">Authorize</string>
    <string name="healthkit_auth_success">Authorize success</string>
    <string name="healthkit_auth_failure">Authorize Failure</string>
    <string name="healthrecord_record_add">add an health record</string>
    <string name="healthrecord_record_update">updates health records of a specified HealthRecordID</string>
    <string name="healthrecord_record_Get">get health records</string>
    <string name="healthrecord_record_Delete">delete health records</string>
    <string name="healthrecord_controller">Managing Health Controller</string>
</resources>
