<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huawei.demo.health.HealthKitHealthRecordControllerActivity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="HealthRecord Controller"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/healthrecord_record_add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:onClick="addHealthRecord"
                android:text="addHealthRecord"
                android:textAllCaps="false" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/healthrecord_record_update" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:onClick="updateHealthRecord"
                android:text="updateHealthRecord"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/healthrecord_record_Get" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.6"
                android:onClick="getHealthRecord"
                android:text="getHealthRecord"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/healthrecord_record_Delete" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.6"
                    android:onClick="deleteHealthRecord"
                    android:text="deleteHealthRecord"
                    android:textAllCaps="false" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="result print：" />

        <TextView
            android:id="@+id/activity_records_controller_log_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="print：\n"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
