<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2019-2019. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huawei.demo.hihealth.HiHealthKitSensorsControllerActivity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textSize="@dimen/app_icon_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sensor Controller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_getController" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="getSensorController"
                android:text="getSensorController"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_registerStep" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="registerSteps"
                android:text="registerSteps"
                android:textAllCaps="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="unregisterSteps"
                android:text="unregisterSteps"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_scan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="scanHeartRateDevices"
                android:text="scanHeartRateDevices"
                android:textAllCaps="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="stopScanning"
                android:text="stopScanning"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="saveHeartRateDevice"
                android:text="saveHeartRateDevice"
                android:textAllCaps="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="listMatchedDevices"
                android:text="listMatchedDevices"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_findSource" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="findDataCollectors"
                android:text="findDataCollectors"
                android:textAllCaps="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="removeHeartRateDevice"
                android:text="removeHeartRateDevice"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_registerHeartRate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="registerHeartRate"
                android:text="registerHeartRate"
                android:textAllCaps="false" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:onClick="unregisterHeartRate"
                android:text="unregisterHeartRate"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Result output：" />

        <TextView
            android:id="@+id/sensor_controller_log_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textview_border"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="print：\n"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
